	of the S3 group generics, which also accept methods for members.

    o	Some BLASes were returning NA %*% 0 as 0 and some as NA.  Now
	slower but more careful code is used if NAs are present. (PR#4582)

    o	package.skeleton() no longer generates invalid filenames for
	code and help files.  Also, care is taken not to generate
	filenames that differ only by case. 




	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.2


BUG FIXES

    o	When lm.{w}fit() disregarded arguments in ... they reported
	the values and not the names.

    o	lm(singular.ok = FALSE) was looking for 0 rank, not rank < p.

    o	The substitution code for strptime in the sources no longer
	follows glibc in silently `correcting' invalid inputs.

    o	The cor() function did not remove missing values in the
	non-Pearson case.

    o	[l]choose() use a more accurate formula which also slightly
	improves p- and qhyper(); choose(n, k) now returns 0 instead
	of NaN for k < 0 or > n.

    o	find(simple.words=TRUE) (the default) was still using regular
	expressions for e.g. "+" and "*".  Also, it checked the mode
	only of the first object matching a regular expression found
	in a package.

    o	Memory leaks in [dpq]wilcox and [dqr]signrank have been plugged.
	These only occurred when multiple values of m or n > 50 were
	used in a single call. (PR#5314, plus another potential leak.)

    o	Non-finite input values to eigen(), La.eigen(), svd() and
	La.svd() are now errors: they often caused infinite
	looping.  (PR#5406, PR#4366, PR#3723: the fix for 3723/4366
	returned a vector of NAs, not a matrix, for the eigenvectors.)

    o	stepfun(x,y) now gives an error when `x' has length 0 instead
	of an invalid result (that could lead to a segmentation
	fault).

    o   buildVignettes() uses file.remove() instead of unlink() to
        remove temporary files.


